--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   				<tr>
   					<td>
   						<form name='form'>
-  						<input name='visor'  class='visor' value="">
+  						<input name='visor' id="verificar" class='visor' value="">
   					</form>
   					</td>
   				</tr>
@@ -60,7 +60,7 @@
   						<input type='button' class='button' onclick='insert(1)' value="1">
   						<input type='button' class='button' onclick='insert(2)' value="2">
   						<input type='button' class='button' onclick='insert(3)' value="3">
-  						<input type='button' class='button_esp' id="soma" value="√">
+  						<input type='button' class='button_esp' id="raiz" value="√">
   					</td>
   				</tr>
 
