--- a/index.html
+++ b/index.html
@@ -1,97 +1,91 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-  	<title>Calculadora</title>
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="style/main.css" />
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Calculadora</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=block">
+  <link rel="stylesheet" href="style/main.css">
+  <link rel="stylesheet" href="style/style.css">
+</head>
+<body>
+  <div class="preloader">
+    <div class="texto-load">
+      <p>CALCULADORA</p>
+      <div class="nome">por William R. Raymundo</div>
+      <div class="spiner"></div>
+    </div>
+  </div>
 
-    <link  href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=block" rel="stylesheet">
-    <link rel="stylesheet" media="screen" href="style/style.css">
-  </head>
-  <body>
-  	<div class="preloader">
-  		<div class="texto-load"><p>CALCULADORA</p><div class="nome">por William R. Raymundo</div>
-  			<div class="spiner"></div>
-  		</div>
-  	</div>
+  <div class="body">
+    <div class="calculadora">
+      <table>
+        <tr>
+          <td>
+            <div class="history" id="history"></div>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <form name="form">
+              <input name="visor" id="verificar" class="visor" value="">
+            </form>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <input type="button" class="button_esp" id="resetar" value="c">
+            <input type="button" class="button_esp" id="apagar" value="<">
+            <input type="button" class="button_esp" id="divi" value="/">
+            <input type="button" class="button_esp" id="multi" value="*">
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <input type="button" class="button" onclick="insert(7)" value="7">
+            <input type="button" class="button" onclick="insert(8)" value="8">
+            <input type="button" class="button" onclick="insert(9)" value="9">
+            <input type="button" class="button_esp" id="soma" value="+">
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <input type="button" class="button" onclick="insert(4)" value="4">
+            <input type="button" class="button" onclick="insert(5)" value="5">
+            <input type="button" class="button" onclick="insert(6)" value="6">
+            <input type="button" class="button_esp" id="subt" value="-">
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <input type="button" class="button" onclick="insert(1)" value="1">
+            <input type="button" class="button" onclick="insert(2)" value="2">
+            <input type="button" class="button" onclick="insert(3)" value="3">
+            <input type="button" class="button_esp" id="raiz" value="√">
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <input type="button" class="button_zero" onclick="insert(0)" value="0">
+            <input type="button" class="button" onclick="insert('.')" value=".">
+            <input type="button" class="button_igual" id="result" value="=">
+          </td>
+        </tr>
+      </table>
+    </div>
+  </div>
 
-  	<div class="body">
-  		<div class="calculadora">
-  			<table>
-  				<tr>
-  					<td>
-  						<div class="history" id="history"></div>
-  					</td>
-  				</tr>
-  				<tr>
-  					<td>
-  						<form name='form'>
-  						<input name='visor' id="verificar" class='visor' value="">
-  					</form>
-  					</td>
-  				</tr>
-  				<tr>
-  					<td>
-  						<input type='button' class='button_esp' id="resetar" value="c">
-  						<input type='button' class='button_esp'	id="apagar"   value="<">
-  						<input type='button' class='button_esp'	id="divi" value="/">
-  						<input type='button' class='button_esp' id="multi"   value="*">
-  						</td>
-  					</tr>
-  				<tr>
-  					<td>
-  						<input type='button' class='button' onclick='insert(7)' value="7">
-  						<input type='button' class='button' onclick='insert(8)' value="8">
-  						<input type='button' class='button' onclick='insert(9)' value="9">
-  						<input type='button' class='button_esp' id="soma"  value="+">
-  					</td>
-  				</tr>
-  				<tr>
-  					<td>
-  						<input type='button' class='button' onclick='insert(4)' value="4">
-  						<input type='button' class='button' onclick='insert(5)' value="5">
-  						<input type='button' class='button' onclick='insert(6)' value="6">
-  						<input type='button' class='button_esp' id="subt"  value="-">
-  					</td>
-  				</tr>
-  				<tr>
-  					<td>
-  						<input type='button' class='button' onclick='insert(1)' value="1">
-  						<input type='button' class='button' onclick='insert(2)' value="2">
-  						<input type='button' class='button' onclick='insert(3)' value="3">
-  						<input type='button' class='button_esp' id="raiz" value="√">
-  					</td>
-  				</tr>
+  <div id="particles-js"></div>
 
-  				<tr>
-  					<td>
-  						<input type='button' class='button_zero' onclick='insert(0)' value="0">
-  						<input type='button' class='button' onclick='insert(".")' value=".">
-  						<input type='button' class='button_igual' id="result" value="=">
-  					</td>
-  				</tr>
-  			</table>
-  		</div>
-  		<!--<img src="https://picsum.photos/300/300/?random" /> -->
-  	</div>
-
-     <!-- particles.js container -->
-<div id="particles-js"></div>
-
-<!-- scripts -->
-<script src="script/particles.min.js"></script>
-<script src="script/app.js"></script>
-<script src="script/js.js"></script>
-
-
-
-
-
-    <script>
-        $(window).on("load",function(){
-          $(".preloader").delay(500).fadeOut("slow");
-        });
-    </script> 
-  </body>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <script src="script/particles.min.js"></script>
+  <script src="script/app.js"></script>
+  <script src="script/js.js"></script>
+  <script>
+    $(window).on("load", function() {
+      $(".preloader").delay(500).fadeOut("slow");
+    });
+  </script>
+</body>
 </html>
